catalog/static/catalog/pgs.scss
/* ... */
@media screen and (max-width: 767px){
  .pgs_browse {
    margin-bottom: 0rem;
    padding-bottom: 3rem;
    border-bottom: 1px solid $pgs_colour_2;
    > div {
      margin: 10px 0px;
    }
  }
  .pgs_benchmark {
    display: block;
    a {
      padding:5px 20px;
      margin: 0px 15px;
    }
  }
  .pgs_desc {
    margin-bottom: 0rem;
    > div {
      border-right:none;
      padding-top: 3rem;
      padding-bottom: 3rem;
      border-bottom: 1px solid $pgs_colour_2;
    }
  }
  .pgs_section {
    margin-top: 3rem;
  }
}
@media screen and (min-width: 767px) and (max-width: 919px) {
  .pgs_browse {
    a {
      margin: 0px 10px;
      padding: 20px !important;
      > div:first-child {
        font-size: 2.5vw;
      }
    }
  }
}
@media screen and (min-width: 920px) {
  .pgs_browse {
    margin-left: 4vw;
    margin-right: 4vw;
  }
}
@media screen and (min-width: 900px) and (max-width: 1225px) {
  .pgs_browse {
    a {
      > div:first-child {
        font-size: 2.4vw;
      }
    }
  }
}
@media screen and (min-width: 1226px) {
  .pgs_browse {
    margin-left: 7vw;
    margin-right: 7vw;
  }
}


/* Form */
.pgs_form_container {
  flex-direction:row;
  display: flex;
  justify-content: flex-start;
  > div:not(:last-child) {
    margin-right: 1rem!important;
  }
}
/* Mobile phone display */
@media screen and (max-width: 499px) {
  .pgs_form_container {
    flex-direction:column;
    justify-content: center;
    > div {
      margin-right:0px;
    }
  }
}


/* Ancestry */
.filter_container {
  border:1px solid $pgs_darkC;
  border-radius:4px;
  padding:4px 10px;
}
.filter_header {
  font-weight: 200;
  border-bottom:1px solid $pgs_darkC;
  color: $pgs_dark0;
  padding-bottom:4px;
  margin-bottom: 6px;
  text-align:center;
}
.filter_form {
  display:flex;
  flex-flow: row wrap;
}
.filter_study {
  margin-right: 1rem;
  padding-right:1rem;
  border-right:1px solid $pgs_darkC;
}
.filter_subheader {
  font-weight: 200;
}

#ancestry_legend_content {
  display:flex;
  flex-flow: row wrap;
}
.ancestry_legend {
  font-size:80%;
  ul {
    margin-left: 1rem;
  }
  > div {
    line-height: 18px;
  }
}
.ancestry_box_legend {
  margin-right:8px;
  font-size: 14px;
  vertical-align: middle;
}


/* Mobile phone display */
@media screen and (max-width: 1069px) {
  .filter_study{
    border-right: 1px solid $pgs_colour_white;
  }
  .filter_ancestry {
    margin-top:1rem;
  }
}


/* Ancestry styling */
.anc_box_gwas, .anc_box_dev, .anc_box_eval {
  font-size: 12px;
  div:first-child {
    font-weight: bold;
    border-bottom:1px solid $pgs_darkC;
    padding-bottom: 4px;
    margin-bottom: 8px;
  }
  div:not(:first-child) {
    text-align:left;
    margin:3px 0px;
    line-height: 15px;
    span {
      padding-left:15px;
      margin-right:5px;
    }
  }
  > span {
    display: block;
    margin-top: 8px;
    border-top:1px solid $pgs_darkC;
    padding-top: 4px;
  }
  ul {
    font-size: 90%;
    margin-bottom: 0.4rem;
    padding-left:30px;
  }
}
.anc_box_gwas {
  div:first-child:before {
    content: "G - Source of Variant Associations (GWAS)";
  }
  > span:after {
    content: " individuals (100%)"
  }
}
.anc_box_dev {
  div:first-child:before {
    content: "D - Score Development/Training";
  }
  > span:after {
    content: " individuals (100%)"
  }
}
.anc_box_eval {
  div:first-child:before {
    content: "E - PGS Evaluation";
  }
  > span:after {
    content: " Sample Sets (100%)"
  }
}

.anc_col_subtitle {
  display:flex;
  font-size:12px;
  white-space:nowrap;
  text-align:center;
  font-weight: normal !important;
  div {
    display:inline-block;
    width:48px;
    padding:4px 5px;
    margin:0px;
  }
  div:not(:first-child) {
    border-left: 1px solid $bootstrap-table_border_colour;
  }
}
.anc_chart_container {
  display:flex;
  > div {
    width:50px;
    height:40px;
    padding:0px 5px;
    text-align:center;
    line-height:40px;
    &:hover {
      cursor:default;
    }
  }
}
.anc_chart svg {
  width:40px !important;
  height:40px !important;
}

text.pie_text {
  text-anchor:middle;
}


/* Ancestry colours */
$ancestry_colours: (
  "AFR": #FFD900, //gold(ish)
  "AMR": #E41A1C, // red
  "ASN": #B15928, // brown
  "EAS": #4DAF4A, // green
  "EUR": #377EB8, // blue
  "GME": #00CED1, // turquoise
  "SAS": #984EA3, // purple
  "MAE": #A6CEE3, // light blue
  "MAO": #FF7F00, // orange
  "NR":  #BBB,    // lighter grey
  "OTH": #999     // grey
);

$ancestry_labels: (
  'MAE': 'Multi-ancestry (including European)',
  'MAO': 'Multi-ancestry (excluding European)',
  'AFR': 'African',
  'EAS': 'East Asian',
  'SAS': 'South Asian',
  'ASN': 'Additional Asian Ancestries',
  'EUR': 'European',
  'GME': 'Greater Middle Eastern',
  'AMR': 'Hispanic or Latin American',
  'OTH': 'Additional Diverse Ancestries',
  'NR' : 'Not Reported'
);

@each $anc_key, $anc_colour in $ancestry_colours {
  .anc_#{$anc_key} {
    background-color: $anc_colour;
  }
  .anc_colour_#{$anc_key} {
    color: $anc_colour;
    &:before {
      color: $anc_colour;
      font-family: "Font Awesome 6 Free";
      content: "\f0c8";
      font-weight:900;
    }
  }
  .anc_bd_#{$anc_key} {
    border-left: 8px solid $anc_colour;
    padding-left:5px;
  }
}
// Fill yup the ancestry chart tooltips
@each $anc_key, $anc_label in $ancestry_labels {
  .anc_bd_#{$anc_key}:before {
    content: $anc_label+": ";
  }
}


.ancestry_example_container {
  display:flex;
  flex-wrap:wrap;
  > div {
    padding:10px;
    border:1px solid $pgs_darkC;
    div:first-child {
      text-align:center;
      background-color: $pgs_light_grey;
    }
    div.ancestry_example_combined {
      border-top:1px solid $pgs_darkC;
    }
    ul {
      min-height: 65px;
    }
  }
}

